--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "prettier-eslint": "^8.8.2"
+  }
 }
