--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/react": "^8.0.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "jest-dom": "^3.5.0",
     "prettier": "1.17.1"
   }
 }
