--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "array-move": "^2.1.0",
     "firebase": "^6.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.1",
@@ -11,6 +12,7 @@
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.3",
+    "react-sortable-hoc": "^1.9.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0",
