--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
+    "cypress": "^3.3.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
